--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,8 +1,8 @@
-0.9.0
+0.9.2
 =====
 
-Initial release
-
+new:
+- [fileMerger] added a new program that can merge sequence files
 
 0.9.1
 =====
@@ -15,3 +15,9 @@ improvements:
 - [concatenator] better documentation
 - [concatenator] added examples
 - [general] Changed CMake to download BioSeqDataLib even if sequence-fairies is not a git repository itself
+
+
+0.9.0
+=====
+
+Initial release
